Branch to test the use of toggles instead of bottom bar activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".About"
-            android:exported="false" />
-        <activity
-            android:name=".Dashboard"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
+            android:name=".HomeActivity"
             android:exported="false" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".LoginActivity" />
