--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.4.0'
 
-    def camerax_version = "1.0.1"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha27"
+    //def camerax_version = "1.0.1"
+    //implementation "androidx.camera:camera-camera2:$camerax_version"
+    //implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    //implementation "androidx.camera:camera-view:1.0.0-alpha27"
     //implementation "com.google.zxing:core:3.3.3"
     implementation "com.journeyapps:zxing-android-embedded:4.1.0"
 
