refactor package name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lucadepalo.smartirrigator">
+    package="com.lucadepalo.personalgarden">
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -16,11 +16,11 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".QRcodeActivity"
+            android:name="com.lucadepalo.personalgarden.QRcodeActivity"
             android:exported="false" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name="com.lucadepalo.personalgarden.LoginActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.lucadepalo.personalgarden.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
