--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".GridActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TrialActivity"
+            android:exported="false" />
+        <activity
             android:name=".DragDropActivity"
             android:exported="false" />
         <activity
@@ -29,6 +35,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
