--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.4.0'
 
-    //def camerax_version = "1.0.1"
-    //implementation "androidx.camera:camera-camera2:$camerax_version"
-    //implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    //implementation "androidx.camera:camera-view:1.0.0-alpha27"
-    //implementation "com.google.zxing:core:3.3.3"
     implementation "com.journeyapps:zxing-android-embedded:4.1.0"
+    implementation files('libs\\DraggableGridView.jar')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    implementation 'com.github.woxthebox:draglistview:1.7.3'
 }
