Fixed species fetch from server and selection activity, to be fixed: logic of pots added, first vs next pot, synergy selection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".setCropActivity"
+            android:name=".SynergyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SetCropActivity"
             android:exported="false" />
         <activity
             android:name=".GridActivity"
